Added mockito dependency